--- a/index.html
+++ b/index.html
@@ -4,17 +4,36 @@
     <meta charset="UTF-8">
     <title>My Current Title</title>
     <link rel="stylesheet" href="css/reset.css">
-    <!--<link rel="stylesheet" href="css/skeleton.css">-->
     <link rel="stylesheet" href="css/style.css"></head>
 <body>
-    <header>
-        <h1>This is is a H! in the Header</h1>
-    </header>
+  <header>
+    <nav class="nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="sales.html">Sales</a></li>
+        <li><a href="products.html">Products</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
 
+  </main>
+    <h1>Please select a Product</h1>
+    <div class="image-div">
+        <div>
+            <img src="" alt="" id="bus-mall-items1">
+        </div>
+        <div>
+            <img src="" alt="" id="bus-mall-items2">
+        </div>
+        <div>
+            <img src="" alt="" id="bus-mall-items3">
+        </div>
+    </div>
 
-    <footer>
-        <h2>This is an h2 in the footer.</h2>
-    </footer>
+  <footer>
+      <h2>Bus Mall Application powered by...</h2>
+  </footer>
     <script src="js/app.js"></script>
 </body>
 </html>
