--- a/index.html
+++ b/index.html
@@ -10,27 +10,20 @@
     <nav class="nav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="sales.html">Sales</a></li>
-        <li><a href="products.html">Products</a></li>
+        <li><a href="#">Coming Soon</a></li>
+        <li><a href="#">Coming Soon</a></li>
       </ul>
     </nav>
   </header>
   <main>
-
-  </main>
     <h1>Please select a Product</h1>
-    <div class="image-div">
-        <div>
-            <img src="" alt="" id="bus-mall-items1">
-        </div>
-        <div>
-            <img src="" alt="" id="bus-mall-items2">
-        </div>
-        <div>
-            <img src="" alt="" id="bus-mall-items3">
-        </div>
-    </div>
+      <div id="products">
+        <img id="pod-pic1" src="" alt="" title ="">
+        <img id="pod-pic2" src="" alt="" title ="">
+        <img id="pod-pic3" src="" alt="" title ="">
 
+      </div>
+  </main>
   <footer>
       <h2>Bus Mall Application powered by...</h2>
   </footer>
