fixed crash and tracking issue

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
   </header>
   <main>
     <h1>Please select a Product</h1>
-      <div id="products">
+      <section id="products">
         <img id="pod-pic1" src="" alt="" title ="">
         <img id="pod-pic2" src="" alt="" title ="">
         <img id="pod-pic3" src="" alt="" title ="">
-      </div>
+      </section>
+      <section>
+          <ul id="click-results">
+          </ul>
+      </section>
   </main>
   <footer>
       <h2>Bus Mall Application powered by...</h2>
