--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
           <ul id="click-results">
           </ul>
       </section>
+      <canvas id="summary"></canvas>
   </main>
   <footer>
       <h2>Bus Mall Application powered by...</h2>
   </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
